--- a/model.ipynb
+++ b/model.ipynb
@@ -378,6 +378,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create some variables\n",
+    "steps = math.ceil(1000/batch_size)\n",
+    "num_warmup_steps = round(steps*warmup_proportion*epochs)\n",
+    "\n",
     "def create_and_train_model(lr: float, path: str, training_data, eval_data) -> None:\n",
     "    \"\"\"\n",
     "    Create a model based on a pretrained model, then fine-tune the model and save it to a file. \n",
