--- a/model.ipynb
+++ b/model.ipynb
@@ -99,7 +99,8 @@
     "from transformers import AutoModelForSequenceClassification, Trainer, TrainingArguments, AutoTokenizer, pipeline\n",
     "import numpy as np\n",
     "import evaluate\n",
-    "import sklearn"
+    "import sklearn\n",
+    "import math"
    ]
   },
   {
